--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav role="navigation">
                 <h1><a href="#">TaskForce</a></h1>
                 <ul class="nav-ul">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Hour of Code</a></li>
-                    <li><a href="#">Website project</a></li>
+                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./hourcode.html">Hour of Code</a></li>
+                    <li><a href="./websiteproject.html">Website project</a></li>
                 </ul>
             </nav>
         </header>
@@ -55,12 +55,12 @@
                     <button class="button" type="button" onclick="myFunction4()" id="myBtn4">Read More</button>
                 </adrticle>
             </section>
-            <footer>
+            <footer class="footer-ui">
                 <nav role="navigation">
                     <ul class="nav-ul">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Hour of Code</a></li>
-                        <li><a href="#">Website project</a></li>
+                        <li><a href="./index.html" class="active-bot">Home</a></li>
+                        <li><a href="./hourcode.html">Hour of Code</a></li>
+                        <li><a href="./websiteproject.html">Website project</a></li>
                     </ul>
                 </nav>
                 <p class="copy">&copy; Ulik Design 2021</p>
